# scraper

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  scraper.1
.github/workflows/: publish.yml  test.yml
examples/: document.rs  fragment.rs  parse.rs  parse_document.rs  parse_fragment.rs  parse_selector.rs  print_dom.rs  select.rs
scraper/: Cargo.toml  README.md
scraper/src/: error.rs  lib.rs  main.rs  node.rs  selector.rs  test.rs
scraper/src/element_ref/: element.rs  mod.rs
scraper/src/error/: utils.rs
scraper/src/html/: mod.rs  tree_sink.rs
scraper/src/node/: serializable.rs
scraper_proc_macros/: Cargo.toml
scraper_proc_macros/src/: lib.rs
src/: comment.rs  css.rs  doctype.rs  dom.rs  element.rs  error.rs  html.rs  lib.rs  main.rs  node.rs  selector.rs  test.rs  text.rs
src/dom/: display.rs  iter.rs  mod.rs  tree_sink.rs
src/element_ref/: element.rs  mod.rs  serializable.rs
src/error/: utils.rs
src/html/: mod.rs  tests.rs  tree_sink.rs
src/node_ref/: element.rs  mod.rs
tests/: html_to_text.rs
