[package]
name = "scraper"
version = "0.27.0"
edition = "2024"

description = "HTML parsing and querying with CSS selectors"
categories = ["web-programming", "text-processing"]
keywords = ["html", "css", "selector", "scraping"]

authors = ["June McEnroe <june@causal.agency>"]
license = "ISC"

repository = "https://github.com/rust-scraper/scraper"
readme = "README.md"

[dependencies]
cssparser = "0.37.0"
ego-tree = "0.11.0"
html5ever = "0.39.0"
indexmap = { version = "2.14.0", optional = true }
precomputed-hash = "0.1.1"
selectors = "0.37.0"
serde = { version = "1.0.228", optional = true }
tendril = "0.5.0"

[dependencies.getopts]
version = "0.2.24"
optional = true

[features]
default = ["main", "errors"]
deterministic = ["dep:indexmap"]
main = ["dep:getopts"]
atomic = []
errors = []
serde = ["dep:serde"]

[[bin]]
name = "scraper"
path = "src/main.rs"
required-features = ["main"]
